--- a/Theory-of-Languages-and-Machines/19.tex
+++ b/Theory-of-Languages-and-Machines/19.tex
@@ -1,1 +1,100 @@
+\documentclass[10pt,a4paper]{article}
 
+\usepackage{graphicx}
+% Requires \usepackage{graphicx}
+
+\begin{document}
+
+\scriptsize
+
+\begin{flushright}
+\textsf{\textbf{Basic Terminology $|$ 19}}
+\end{flushright}
+
+It is clear from the previous discussion that for all the cases xRy $\Rightarrow$ xzRyz. Thus, R is a right
+
+invariant.
+
+\begin{flushleft}
+  5.\, Check whether a set of numbers divisible by n is closed under subtraction and division (except
+
+\quad\, division by 0) operation.
+\end{flushleft}
+
+\textsf{\textbf{Solution:}} A set of numbers divisible by n can be represented as $S = \{0, n, 2n, 3n, 4n,……\}$.
+
+\textsf{\textbf{Subtraction:}}
+
+\begin{center}
+  $ n - 0 = n $
+
+  $n - 2n =  -n$
+
+  $3n - n = 2n$
+
+  …………..
+\end{center}
+
+In general, $(m - p)n-(m-q).n = n(q-p)$. This may or may not be divisible by n. So, a
+
+set of numbers divisible by n is not closed under division.
+
+\qquad \tiny
+\qquad
+
+\textsl{\textbf{Division:}}
+
+\begin{center}
+2n/n = 2
+
+3n/2n = 3/2
+
+…………......
+\end{center}
+
+In general, $(m - p)n/(m-q).n = (m-p)/(m-q)$. This may or may not be divisible by n. So,a set of
+
+numbers divisible by n is not closed under division.
+
+\begin{figure}[h]
+  \centering
+  % Requires \usepackage{graphicx}
+  \includegraphics[width=12cm]{1.1}\\
+\end{figure}
+
+1. For a string, any prefi x of the string other than the string itself is called as the -------------------- of the
+
+\quad\,string.
+
+2. For a string , any suffi x of the string other than the string itself is called as the -------------------- of the
+
+\quad\,string.
+
+3. If there are two sets A and B, then their intersection is denoted by -------------------- .
+
+4. For a set of elements n, the number of elements of the power set of A is -------------------- .
+
+5. A relation R is said to be -------------------- , if for two elements ‘a’ and ‘b’ in X, if a is related to b then
+
+\quad\,b is related to a.
+
+6. A relation R is said to be --------------------- , if for a, b, c $\in$ A and if aRb, bRc hold good then aRc also
+
+holds good .
+
+7. A relation R is called as an ------------------ on ‘A’, if R is refl exive, symmetric, and transitive.
+
+\qquad \tiny 
+\qquad
+
+\textsf{\textbf{Answers:}}
+
+\qquad \tiny 
+
+1. proper prefi x \qquad\qquad\qquad  2. proper suffi x \qquad\qquad\qquad 3. A $\cap$ B
+
+4. $2^{n}$ \qquad\qquad\qquad\qquad\qquad\quad 5. symmetric \qquad\qquad\quad\quad\quad\, 6. transitive
+
+7. equivalence relation
+
+\end{document}
