--- a/Theory-of-Languages-and-Machines/20.tex
+++ b/Theory-of-Languages-and-Machines/20.tex
@@ -1,1 +1,36 @@
+\documentclass[10pt,a4paper]{article}
 
+\usepackage{graphicx}
+% Requires \usepackage{graphicx}
+
+\begin{document}
+
+\scriptsize
+
+\begin{flushleft}
+\textsf{\textbf{20\: $|$ \,Introduction to Automata Theory, Formal Languages and Computation}}
+\end{flushleft}
+
+\begin{figure}[h]
+  \centering
+  % Requires \usepackage{graphicx}
+  \includegraphics[width=13cm]{1.1}\\
+\end{figure}
+
+1.\, Using Venn diagram prove that $A \cup (B \cap C) = (A \cup B) \cap (A \cup C)$.
+
+2.\, Prove that $(a) A \cup (A^{C} \cap B) = A \cup B and (b) A \cap (A^{C} \cup B) = A \cap B$.
+
+3.\, A relation R is defi ned as a R b if $ a^{2} - b^{2}$ is divisible by 5, where a and b are integers.
+
+\quad\,Prove that R is an equivalence relation.
+
+4.\, A relation R is defi ned on set N (natural numbers) such that $R = \{(a, b) \in N \times N \:if \: ^{,}a^{,} $ is
+
+\quad\, a divisor of $^{,}b^{,}\}$. Examine if R is reflexive, symmetric, and transitive.
+
+5.\, Check whether the relation power defi ned as ab, where a and b are natural numbers, is 
+
+\quad\, closed or not.
+
+\end{document}
